[gd_scene load_steps=2 format=2]

[ext_resource path="res://Demo/Playground.gd" type="Script" id=1]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = 28.0
margin_top = 23.0
margin_right = 68.0
margin_bottom = 63.0

[node name="Button" type="Button" parent="Control"]
margin_right = 84.0
margin_bottom = 20.0
text = "Disconnect"

[node name="Button2" type="Button" parent="Control"]
margin_top = 32.0
margin_right = 84.0
margin_bottom = 52.0
text = "Connect"

[node name="Button3" type="Button" parent="Control"]
margin_top = 66.0
margin_right = 98.0
margin_bottom = 86.0
text = "Channel Push"

[node name="Button4" type="Button" parent="Control"]
margin_top = 95.0
margin_right = 182.0
margin_bottom = 115.0
text = "Channel Push - Error result"

[node name="Button5" type="Button" parent="Control"]
margin_top = 135.0
margin_right = 182.0
margin_bottom = 155.0
text = "Leave"

[node name="Button6" type="Button" parent="Control"]
margin_top = 170.0
margin_right = 182.0
margin_bottom = 190.0
text = "Join"

[node name="Button7" type="Button" parent="Control"]
margin_left = 6.0
margin_top = 212.0
margin_right = 188.0
margin_bottom = 232.0
text = "Remove Channel Node"

[node name="Button8" type="Button" parent="Control"]
margin_left = 8.0
margin_top = 249.0
margin_right = 190.0
margin_bottom = 269.0
text = "Remove Socket Node"

[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Control/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Control/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Control/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Control/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Control/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Control/Button8" to="." method="_on_Button8_pressed"]
